binrw/tests/ui/derive_binwrite_with_temp.stderr
error: `#[derive(BinWrite)]` cannot create temporary fields; use `#[binrw]` or `#[binwrite]` instead
 --> tests/ui/derive_binwrite_with_temp.rs:5:5
  |
5 | /     #[bw(calc = 0u8)]
6 | |     a: u8,
  | |_________^
